# migration-rs

./: Cargo.toml
example_app/: Cargo.toml
example_app/src/: main.rs
example_legacy_types/: Cargo.toml
example_legacy_types/src/: lib.rs
example_proc_macro/: Cargo.toml
example_proc_macro/src/: lib.rs
migration_macro/: Cargo.toml
migration_macro/src/: lib.rs
migration_repr/: Cargo.toml
migration_repr/src/: lib.rs
