[package]
name = "example_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
example_proc_macro = { path = "../example_proc_macro" }
migration_repr = {path = "../migration_repr"}
migration_macro = {path = "../migration_macro"}
