[package]
name = "example_proc_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.35"
syn = "2.0.49"
migration_repr = {path = "../migration_repr"}
migration_macro = {path = "../migration_macro"}
example_legacy_types = { path = "../example_legacy_types" }


[lib]
proc-macro = true
